コンテンツを更新

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,5 +3,8 @@ h1 {
   background-color: #020202;
   color: #909090;
 }
+h1 :hover {
+  transform: rotate(2);
+}
 
 /*# sourceMappingURL=style.css.map */
