テキストを追加し、色の変更を行いました。

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,8 +3,10 @@ h1 {
   background-color: #020202;
   color: #909090;
 }
-h1 :hover {
-  transform: rotate(2);
+
+p {
+  background-color: #13d66e;
+  color: #020202;
 }
 
 /*# sourceMappingURL=style.css.map */
