--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -2,7 +2,9 @@ h1 {
     font-size: 80px;
     background-color: #020202;
     color: #909090;
-    :hover {
-        transform: rotate(2);
-    }
+}
+
+p {
+    background-color: #13d66e;
+    color: #020202;
 }
