--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,10 +1,52 @@
-h1 {
-    font-size: 80px;
-    background-color: #020202;
-    color: #909090;
-}
-
-p {
-    background-color: #13d66e;
-    color: #020202;
+.stage {
+    width: 100%;
+    height: 500px;
+    background-color: #dadada;
+    .ball {
+        width: 100px;
+        height: 100px;
+        border-radius: 100%;
+        background-color: orange;
+        animation-name: slide;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in;
+    }
+    @keyframes slide {
+        0% {
+            transform: translateX(0);
+            animation-timing-function: ease-in;
+        }
+        30% {
+            transform: translateX(200px) translateY(400px);
+            animation-timing-function: ease;
+        }
+        40% {
+            transform: translateX(300px) translateY(200px);
+            animation-timing-function: ease-out;
+        }
+        50% {
+            transform: translateX(400px) translateY(400px);
+            animation-timing-function: ease-in-out;
+        }
+        60% {
+            transform: translateX(450px) translateY(300px);
+            animation-timing-function: ease-in-out;
+        }
+        70% {
+            transform: translateX(550px) translateY(400px);
+        }
+        100% {
+            transform: translateX(90vw) translateY(400px);
+        }
+        // 0% {
+        //     transform: translateX(0%) translateY(0px) scale(0.5, 1);
+        // }
+        // 50% {
+        //     transform: translateX(500px) translateY(250px) scale(1);
+        // }
+        // 100% {
+        //     transform: translateX(0%) translateY(0px) scale(2);
+        // }
+    }
 }
